rename couner (consumer|sink) to analytics (consumer|sink). Remove the custom SpEL convert in favor of config-common

--- a/README.adoc
+++ b/README.adoc
@@ -25,7 +25,7 @@ The following are the four major components of this repository.
 |link:functions/consumer/cassandra-consumer/README.adoc[Cassandra]
 |link:functions/function/filter-function/README.adoc[Filter]
 |link:functions/supplier/ftp-supplier/README.adoc[FTP]
-|link:functions/consumer/counter-consumer/README.adoc[Counter]
+|link:functions/consumer/analytics-consumer/README.adoc[Analytics]
 |link:functions/function/header-enricher-function/README.adoc[Header-Enricher]
 |link:functions/supplier/geode-supplier/README.adoc[Geode]
 |link:functions/consumer/file-consumer/README.adoc[File]
@@ -80,7 +80,7 @@ The following are the four major components of this repository.
 |link:applications/sink/cassandra-sink/README.adoc[Cassandra]
 |link:applications/processor/bridge-processor/README.adoc[Bridge]
 |link:applications/source/ftp-source/README.adoc[FTP]
-|link:applications/sink/counter-sink/README.adoc[Counter]
+|link:applications/sink/analytics-sink/README.adoc[Analytics]
 |link:applications/processor/filter-processor/README.adoc[Filter]
 |link:applications/source/geode-source/README.adoc[Geode]
 |link:applications/sink/file-sink/README.adoc[Fiile]
@@ -99,7 +99,7 @@ The following are the four major components of this repository.
 |link:applications/processor/object-detection-processor/README.adoc[Object Detection(Tensorflow)]
 |link:applications/source/mongodb-source/README.adoc[MongoDB]
 |link:applications/sink/mongodb-sink/README.adoc[MongoDB]
-|link:applications/processor/semantic-segmentation-processor/README.adoc[Object Detection(Tensorflow)]
+|link:applications/processor/semantic-segmentation-processor/README.adoc[Semantic Segmentation(Tensorflow)]
 |link:applications/source/mqtt-source/README.adoc[MQTT]
 |link:applications/sink/mqtt-sink/README.adoc[MQTT]
 |link:applications/processor/script-processor/README.adoc[Script]
